=== changes in behavior that would not be backwards compatible with
=== previous versions; for that information see the UPGRADE.txt file
=== and the other UPGRADE files for older releases.
===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.2.0 to Asterisk 12.3.0 ------------
------------------------------------------------------------------------------

ARI
------------------
 * A new Playback URI 'tone' has been added. Tones are specified either as
   an indication name (e.g. 'tone:busy') from indications.conf or as a tone
   pattern (e.g. 'tone:240/250,0/250'). Tones differ from normal playback
   URIs in that they must be stopped manually and will continue to occupy
   a channel's ARI control queue until they are stopped. They also can not
   be rewound or fastforwarded.

 * User events can now be generated from ARI.  Events can be signalled with
   arbitrary json variables, and include one or more of channel, bridge, or
   endpoint snapshots.  An application must be specified which will receive
   the event message (other applications can subscribe to it).  The message
   will also be delivered via AMI provided a channel is attached.  Dialplan
   generated user event messages are still transmitted via the channel, and
   will only be received by a stasis application they are attached to or if
   the channel is subscribed to.

chan_sip
-----------
 * SIP peers can now specify 'trust_id_outbound' which affects RPID/PAI
   fields for prohibited callingpres information. Values are legacy, no, and
   yes. By default, legacy is used.
   trust_id_outbound=legacy - behavior remains the same as 1.8.26.1. When
     dealing with prohibited callingpres and sendrpid=pai/rpid, RPID/PAI
     headers are appended to outbound SIP messages just as they are with